move from app to toolbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div class="toolbar" role="banner">
-  <img width="40" alt="M Logo" src="../favicon.ico" />
-  <span>{{ title }}</span>
+<div>
+  <app-toolbar></app-toolbar>
+  <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
