update toolbar to use material toolbar

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,3 @@
-<div class="toolbar" role="banner">
-    <img width="40" alt="M Logo" src="../../favicon.ico" />
-    <span>Matthew Taylor</span>
-  </div>
+<mat-toolbar color="primary" >
+  <span>Matthew Taylor</span>
+</mat-toolbar>
