--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,3 +1,6 @@
-.spacer {
-    flex: 1 1 auto;
+  img {
+    border-radius: 50%;
+    height: 60px;
+    width: auto;
+    padding-right: 10px;
   }
