--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar color="primary" >
+  <img src="assets/img/bitmojiwave.png" alt="Bitmoji Wave">
   <span>Matthew Taylor | Software Developer</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="fab fa-linkedin-in" aria-label="Example icon-button with heart icon">
-  </button>
 </mat-toolbar>
