add initial about me card

--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -1,3 +1,10 @@
-.card {
+.about-me-card {
     margin: auto;
+    max-width: 500px;
   }
+
+.wave-img {
+  height: 400px;
+  width: 400px;
+  margin: auto;
+}
