--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,7 +1,11 @@
-<mat-card class="card">
+<mat-card class="about-me-card">
     <mat-card-header>
       <mat-card-title>About Me</mat-card-title>
     </mat-card-header>
+    <img mat-card-image class="wave-img" src="assets/img/bitmojicomputerwave.png" alt="BitEmoji photo waving hello through a laptop">
     <mat-card-content>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sed quam ac mi euismod suscipit. Curabitur et augue massa. Nam eu mollis augue. Mauris vehicula purus ut tellus vestibulum, hendrerit ultricies lorem cursus. Fusce sed dictum enim. Phasellus velit leo, maximus et eleifend id, auctor et est. Donec eget orci nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam pellentesque eros vel consequat dignissim.</p>
     </mat-card-content>
   </mat-card>
+
+  
