--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" >
+<mat-toolbar color="primary" class="toolbar" >
   <img src="assets/img/bitmojiwave.png" alt="Bitmoji Wave">
   <span>Matthew Taylor | Software Developer</span>
   <span class="spacer"></span>
