rename about me component

--- a/src/app/components/app-root/app.root.html
+++ b/src/app/components/app-root/app.root.html
@@ -1,5 +1,5 @@
 <div>
   <app-toolbar></app-toolbar>
-  <app-about-me></app-about-me>
+  <about-me></about-me>
   <router-outlet></router-outlet>
 </div>
