add work history component

--- a/src/app/components/app-root/app.root.html
+++ b/src/app/components/app-root/app.root.html
@@ -1,5 +1,6 @@
 <div>
   <app-toolbar></app-toolbar>
   <about-me></about-me>
+  <work-history></work-history>
   <router-outlet></router-outlet>
 </div>
