--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="toolbar" >
   <img src="assets/img/bitmojiwave.png" alt="Bitmoji Wave">
-  <span>Matthew Taylor | Software Developer</span>
+  <h1>Matthew Taylor</h1>
   <span class="spacer"></span>
   <a mat-icon-button href="https://www.linkedin.com/in/matthew-taylor-rittech-ambcs-7a074b148" title="Link to Linkedin">
     <svg
