add initial contact me component

--- a/src/app/components/app-root/app.root.html
+++ b/src/app/components/app-root/app.root.html
@@ -2,5 +2,6 @@
   <app-toolbar></app-toolbar>
   <about-me></about-me>
   <work-history></work-history>
+  <contact-me></contact-me>
   <router-outlet></router-outlet>
 </div>
