move card to css

--- a/src/app/components/work-history/work-history.component.html
+++ b/src/app/components/work-history/work-history.component.html
@@ -1,4 +1,4 @@
-<mat-card class="work-history-card">
+<mat-card class="card">
     <mat-card-header>
       <mat-card-title>Work History</mat-card-title>
     </mat-card-header>
