--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<mat-card class="about-me-card">
+<mat-card class="card">
     <mat-card-header>
       <mat-card-title>About Me</mat-card-title>
     </mat-card-header>
