--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.card {
+    margin: 0 auto 20px;
+    max-width: 500px;
+  }
