--- a/src/app/components/contact-me/contact-me.component.css
+++ b/src/app/components/contact-me/contact-me.component.css
@@ -1,4 +1,19 @@
-.contact-me-card {
-    margin: 0 auto 20px;
-    max-width: 500px;
+  form {
+    padding: 5%;
+    border-radius: 2%;
+  }
+ 
+  .mat-form-field {
+    width: 100%;
+  }
+
+  .submit {
+    float: right;
+  }
+
+  .hidden {
+    display: none
+  }
+  .visible {
+    display: block
   }
