add initial footer

--- a/src/app/components/app-root/app.root.html
+++ b/src/app/components/app-root/app.root.html
@@ -4,4 +4,5 @@
   <work-history></work-history>
   <contact-me></contact-me>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
