move title to ts

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card">
     <mat-card-header>
-      <mat-card-title>About Me</mat-card-title>
+      <mat-card-title>{{title}}</mat-card-title>
     </mat-card-header>
     <img mat-card-image class="wave-img" src="assets/img/bitmojicomputerwave.png" alt="BitEmoji photo waving hello through a laptop">
     <mat-card-content>
