added twitter component

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,5 +2,6 @@
     <mat-toolbar color="primary" class="toolbar" >
         <link-linkedin></link-linkedin>
         <link-github></link-github>
+        <link-twitter></link-twitter>
       </mat-toolbar>
 </footer>
