Add Personal Interest component

--- a/src/app/components/app-root/app.root.html
+++ b/src/app/components/app-root/app.root.html
@@ -1,6 +1,7 @@
 <div>
   <app-toolbar></app-toolbar>
   <about-me></about-me>
+  <personal-interests></personal-interests>
   <work-history></work-history>
   <contact-me></contact-me>
   <router-outlet></router-outlet>
