--- a/src/app/components/work-history/work-history.component.html
+++ b/src/app/components/work-history/work-history.component.html
@@ -8,8 +8,10 @@
                 <mat-icon>{{icon.icon}}</mat-icon>
             </ng-template>
             <mat-step *ngFor="let job of jobs">
-                <ng-template matStepLabel>{{job.timeInJobAndJobTitle}}</ng-template>
-                <p>{{job.content}}</p>
+                <ng-template matStepLabel>{{job.jobTitleAndTimeInJob}}</ng-template>
+                <ul>
+                  <li *ngFor="let keypoint of job.keypoints">{{keypoint}}</li>
+                </ul>
                 <img *ngIf="job.img" mat-card-image class="job-img" src="{{job.img}}" alt="Photo to job's brand">
             </mat-step>
           </mat-vertical-stepper>
