add instagram footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,5 +3,6 @@
         <link-linkedin></link-linkedin>
         <link-github></link-github>
         <link-twitter></link-twitter>
+        <link-instagram></link-instagram>
       </mat-toolbar>
 </footer>
