--- a/src/app/components/app-root/app.root.html
+++ b/src/app/components/app-root/app.root.html
@@ -1,9 +1,9 @@
 <div>
   <app-toolbar></app-toolbar>
-  <about-me></about-me>
-  <personal-interests></personal-interests>
-  <work-history></work-history>
-  <contact-me></contact-me>
+  <app-about-me></app-about-me>
+  <app-personal-interests></app-personal-interests>
+  <app-work-history></app-work-history>
+  <app-contact-me></app-contact-me>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
