--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer>
     <mat-toolbar color="primary" class="toolbar" >
-        <link-linkedin></link-linkedin>
-        <link-github></link-github>
-        <link-twitter></link-twitter>
-        <link-instagram></link-instagram>
+        <app-link-linkedin></app-link-linkedin>
+        <app-link-github></app-link-github>
+        <app-link-twitter></app-link-twitter>
+        <app-link-instagram></app-link-instagram>
       </mat-toolbar>
 </footer>
