fix toolbar links

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -2,6 +2,6 @@
   <img src="assets/img/bitmojiwave.png" alt="Bitmoji Wave">
   <h1>Matthew Taylor</h1>
   <span class="spacer"></span>
-  <link-linkedin></link-linkedin>
-  <link-github></link-github>
+  <app-link-linkedin></app-link-linkedin>
+  <app-link-github></app-link-github>
 </mat-toolbar>
