--- a/src/app/components/personal-interests/personal-interests.component.html
+++ b/src/app/components/personal-interests/personal-interests.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card appearance="outlined" class="card">
     <mat-card-header>
       <mat-card-title>{{title}}</mat-card-title>
     </mat-card-header>
