--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -11,3 +11,9 @@ img {
 .spacer {
   flex: 1 1 auto;
 }
+
+h1 {
+  font: 500 20px/32px Roboto,Helvetica Neue,sans-serif;
+  letter-spacing: normal;
+  margin: auto;
+}
